<resources>
    <string name="app_name">Blocked!</string>
    <string name="actionBarTitle">Blocked.org.uk</string>
    <string name="actionBarSubtitle">Censorship Monitoring Project</string>
    <string name="notifTitle">Censor Census</string>
    <string name="title_section1">ISP Info</string>
    <string name="title_section2">Request Config</string>
    <string name="title_section3">Observatory of Net Interference Signup</string>
    <string name="title_section4">Visualisation</string>
    <string name="title_section5">Results</string>
    <string name="title_section6">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Test Link</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_gencert">Generate Probe HMAC Secret</string>
    <string name="action_seekey">See Key</string>
    <string name="action_get_key">Poll for a URL</string>
    <string name="action_user_key">Get User Key</string>
    <string name="action_probe_key">Get Probe Key</string>
    <string name="privKeyDialogTitle">Private Keys</string>
    <string name="addHint">http://theurltotest.com</string>
    <string name="orgIntro">To participate in the Open Rights Group Censorship Monitoring Project ( http://bit.ly/18B4e8Y ) tap \"Generate Probe HMAC Secret\" which\'ll register this probe.</string>
    <string name="orgUnavailable">THIS FEATURE IS CURRENTLY UNAVAILABLE</string>
    <string name="checkFrequencyLabel">Check Frequency</string>
    <string name="checkConfigFheckBoxLabel">Receive URL check requests and process them automatically</string>
    <string name="radioGCMFull">Receive URL checks through Google Cloud Messaging</string>
    <string name="radioGCMPartial">Receive poll prompts via Google Cloud Messaging but poll for URL details</string>
    <string name="radioPoll">Do not use Google Cloud Messaging at all, poll for new URLs only</string>
    <string name="emailHint">Email Address</string>
    <string name="loginUser">Login</string>
    <string name="registerUser">Register</string>
    <string name="privKeyHint">Add your existing user HMAC secret here if you have one</string>
    <string name="createUserIntro">To help keep track of probe registrations please create an account.</string>
    <string name="checkLogin">Check Status</string>
    <string name="youLabel">You</string>
    <string name="yourISPLabel">Your ISP</string>
    <string name="targetWebsite">Target Website</string>
    <string name="aboutTitle">What\'s the problem?</string>
    <string name="aboutExplain">Filtering technologies are being promoted by government as a means to prevent children from accessing inappropriate sexual material. However in practice, many more people are finding themselves behind filters, which block a much wider range of material. Sometimes, like blogs or forums, this may be deliberate but not really necessary, while at other times, it can be by mistake.
\n\nThis makes filters unnecessarily disruptive to users and very difficult for website owners to understand what is happening, and correct or limit damage.
    \n\nThis app helps your device be part of the Open Rights Group benevolent botnet by crawling links that have been flagged </string>
    <string name="aboutCreditsTitle">Credits</string>
    <string name="aboutCredits">TBC</string>
    <string name="aboutContact">Email us: blocked@OpenRightsGroup.org</string>
    <string name="aboutCallToAction">Join the OpenRightsGroup!</string>
    <string name="randomHex">d6 52 b3 ef b4 33 b2 55 42 a3 ad dd 13 a9 89 b2
d8 43 75 8d d5 97 10 06 54 ad 97 58 f9 3b 6a 48
dc ed 60 f5 07 04 b3 82 b2 cc d3 3f 24 a4 5e ee
fb a1 57 80 05 c4 99 fb bc ef 2f 66 87 81 37 6a
38 42 25 8c e3 d7 ea 41 62 23 54 5d 2a 06 e4 83
e8 0b fa 0c 7c ed 86 15 f6 5e ef 50 35 96 37 dc
5f 09 5e ac 97 71 a0 46 5d 50 27 26 c1 8a c2 42
da e7 a8 c2 8d d6 79 02 87 3b 6e 56 31 96 b7 8f
32 e6 1e 8f 9d e4 09 da 9b 30 7e 8a 81 2e 85 5a
af e2 e0 45 01 3b fd ee 7a 11 54 20 8e 7b 2b 69
77 bb b2 d0 3a 8c b7 e1 f6 76 d5 4a e9 06 42 d0
63 1e e8 60 c6 e9 8c 74 c0 6b 98 30 52 ac 5e b0
da bf aa 78 e6 8d a8 50 8d 20 87 9b e9 b2 39 21
69 26 1b 73 29 dd ad 51 f7 a2 81 cb 6a 9b fa 4e
5e 3d 6d 6f 69 01 fe 92 b1 4e 22 1c d2 4f e4 af
9e bc 9f e4 b5 a2 b1 56 74 fc 5f 84 06 87 40 f7
7c ce b4 78 87 30 43 99 82 d0 67 21 26 21 5e 1b
a0 a2 bc 37 c8 d2 21 d7 99 b9 a1 af b7 b8 7f fe
e0 1e 99 51 81 33 21 24 d3 30 9b 3b 8a 1f 48 30
f3 f9 ad a9 1e 01 b2 99 9d e7 14 92 c2 74 53 7a
66 8f 62 ac bf 5d 29 ff fe 08 25 6a 68 dc e1 ce
f2 bd 37 9e 42 d4 dc 37 6c a6 cf e3 5e 7b 80 0f
3e dc 63 1a 67 41 4c a4 28 ae 6a c4 5f d2 c2 9e
c3 e1 ea ee ba 78 82 fa 75 4c 94 dd 96 29 cc 40
69 44 ac 5b 32 9f 91 85 ca 54 7e b8 e5 51 45 eb
0b 8c 1e 1b 8e 67 85 7f de 03 2d 8a 8e 7f 99 e5
ec c8 66 21 41 6f 00 9b ce 70 9d 7c de 3f ef a5
6a 1f 46 57 9a 44 9a bc 36 87 7d 58 bd b0 00 03
c0 fd 91 8e e4 13 dd 80 87 2e 9d 53 3e b6 ed 1a
56 85 52 d5 9c bf d9 44 7d 99 bf f9 83 d3 38 75
e5 0d 31 43 ab 5a 2a 4d c4 c1 18 d0 91 ce 8b 64
28 d5 ad 99 18 cd fc f2 df 7e e7 cf cc 61 f5 54
2c 8b ff 92 13 f1 72 82 5a a1 28 e4 f4 73 39 a1
72 1e 1a a2 f9 64 c1 49 c7 67 4a f9 c6 31 b6 cd
0e a1 df 59 f0 d3 99 39 e5 30 e0 72 9b de 0e a9
eb 50 80 a8 3c 3b 33 e5 13 13 7a 04 a1 5a 18 d3
c8 4d 4f 9e 6c c2 e7 57 1e e5 b5 60 a0 a9 ea ee
e0 be 71 c3 e8 64 b5 cd f3 03 ba 87 f1 5b f2 43
88 78 ef 5e e3 16 58 12 9f d2 3c e7 64 b5 14 10
a7 94 46 54 e7 cd eb 71 55 59 e5 07 45 43 45 5a
73 24 e2 13 5a 82 ad 51 de f4 0a bf 29 1f 22 44
bd 1c 12 3f d6 b2 75 9d 1c 8c d2 c5 02 be 30 78
84 47 7e 17 d8 e3 8f e2 2b ef 7e 15 89 30 ed ae
b2 63 4d 8c 4e 63 01 a4 2c 27 0b dd 22 62 0d cd
8f fd 58 54 c1 79 6e 66 ec 0f 32 09 c7 52 10 88
84 ae 4c 10 6a a4 82 d6 0a b6 69 42 8d c4 19 7a
01 ca a1 38 4e db 4d 9d 05 6f 62 1b b8 40 0a 1b
5c 53 d4 de ee 07 b3 74 b3 3d 41 2f 47 7d 54 fc
f6 db 0b 16 3c 1a 43 7e 58 a2 59 6e 50 42 7d 8f
aa a3 d2 2e 52 ad f2 12 1e 89 b1 eb 5d 11 59 5e
6f 00 18 8a 32 ee 25 5b af 7c 1e 9d 10 1e 86 6a
4b 72 35 8b a6 be 6a 8e 8b fe a9 59 7a 3f 5c e6
69 46 19 a7 d8 6e f5 10 2f 5b 30 14 75 9f 6c 69
9e 39 4b 18 ce 89 08 07 45 fa 54 29 f7 bc ab cc
84 2e 3f f1 b9 a7 81 00 bc cb a8 bc 47 85 e2 bd
a9 e2 90 9e c2 0c a8 d2 87 09 a4 fc 0e 5b 81 da
cd 9a 78 9b dc 24 9c 81 f5 04 7d bf 76 15 95 e4
f8 55 ad c1 0b 8e 03 a3 c7 e0 fd cf c2 56 6c 34
e3 7b cc 5b 32 79 17 cd c3 60 44 55 b2 19 7c 44
22 55 92 f0 f6 be b3 0d 59 c9 e9 0f 4d 3e d6 b6
6a 73 4a 11 4e 49 99 33 67 6c 0a d7 55 72 5f 00
e8 8e 1e ca 0e 1e 29 f0 e1 6d 2b 65 ae 98 eb 3f
f3 e0 c3 4f 73 0c 27 a3 63 37 4e b2 03 7e 6f 36
61 53 cf 40 a4 45 e2 5b 42 18 2d 9b 6e cc 7b 78
5d 70 9b af 51 c6 c6 d0 e8 44 83 e5 7e 53 a1 71
a0 95 bd ec 52 79 d6 4c da 55 62 bb 70 43 5c 6d
24 9d 8b 85 40 eb 87 c8 be 3e ff 3d c7 73 18 6b
f8 a1 4e 05 3c af 2f 5a 5a e2 3a 5c e1 ba 63 49
b1 90 dc a1 6e 0c 60 74 a6 91 5d 60 7c 6e a2 a9
9d 95 f0 b7 ae e1 b7 95 59 20 18 42 a7 5c 31 09
08 ee dc 70 76 1b c4 8d 08 be 00 60 d1 42 77 11
64 72 5e 05 cc ac 86 41 08 f4 ab e8 7f 5e da bf
64 e0 d4 25 64 28 9c e1 d3 32 09 07 6d 66 e6 06
9f a9 0d de 64 6f e4 76 23 52 1c 7c b7 68 81 ca
2c b4 fc 59 f2 98 35 5d 4c 05 8a 63 aa 01 3f b9
ed b0 a0 c7 5f 6f e1 4b b0 32 b2 4f 43 0d ae bf
e1 41 a1 2b d7 ff 35 43 d0 65 8e d5 d4 0b 1e c8
e7 4d b8 94 4a 67 32 e8 dd 0a 0a b1 17 0d c6 6d
1e bf 7e 9e d2 2d ed 3d 26 46 06 a8 c9 43 36 75
70 18 d9 e7 9d 69 26 d2 e5 0e 57 b0 cd 4c 80 96
09 d5 14 79 be a5 52 6d 9e 46 7a 06 99 3d 07 63
e2 84 32 44 d5 6c d5 10 d1 eb 62 af ba ea cc ed
a3 04 bd 0a 28 31 ac 51 9e a3 03 a7 6f 15 e5 db
dd 68 bb 6f 57 a2 9c a5 f4 9a 13 a0 7b ee 3e 65
f1 15 9f 5a 99 8a 1e af 92 94 77 a1 43 92 31 4f
e1 8d 23 a3 0e 61 98 ba f5 51 ca be 00 7a c9 3d
c8 4b bd 53 70 5a 69 5d f5 4e 73 8b 04 50 8a 4e
d2 09 c6 ec f1 0e bd 24 01 a9 e2 d4 b2 07 42 4b
5a e0 d7 f0 c5 80 f4 1e 12 ad 7a cd 29 9d 88 65
09 0b a1 51 eb d1 2c 8e ec a2 83 1e dd f1 44 07
99 aa 16 e0 25 85 73 1f 70 4d 5a 42 f1 30 00 34
1c b3 9f 8a 59 82 36 d7 db c9 16 96 12 91 a1 b6
3f ee eb bf 4b 9e b1 6d eb 89 8e 97 bc 08 fc e0
43 bc e4 67 fe 15 59 c2 1e fc 0d dd 86 50 fc 40
a1 93 f4 35 3b 25 23 5e aa 4f 6e a5 f3 47 cd 99
be 8b 24 9b 34 7a aa ed 7a e4 dd 0a 7e 97 f6 c7
95 86 c7 8f 4e d8 5c 5b 43 bc 17 ab 93 04 fd f2
1d 94 ad a1 ba b3 32 35 1f 9f bf d8 16 9b 09 86
f3 cc cd 99 f4 25 81 1a bd 00 06 bc ce 66 fc c9
fa f9 0c 14 24 b5 a4 f7 f5 e5 c7 dc f1 0b 87 71
be d1 74 f8 34 2f 70 5f a6 5e 86 58 17 a9 2c c8
7d fd e1 76 c9 47 87 0b 3f 28 9e fa 65 4f 19 db
69 0d 81 47 9c 6d c3 f6 78 73 89 94 ca b7 3c 29
f0 91 e9 ac f1 ba 95 91 ef c4 db 5d a5 bf a4 f3
b5 62 86 d0 71 76 12 4f f3 50 8f f3 c1 e0 99 fa
c0 8b 65 d8 64 7b 73 cd 4a 11 4a ac 45 02 38 82
88 7a 31 4d d1 a5 53 c8 a4 42 4c b3 16 b6 03 39
e1 07 27 d3 cf d7 8c 59 d7 80 a3 4f 84 ec 38 83
98 10 78 0b 47 31 92 32 74 a5 fa 7f 0a b6 02 6f
62 e5 4b 01 d8 f0 fe 36 78 fc e9 e6 e9 5b 51 ab
10 e9 94 a2 11 a1 93 20 eb 13 54 f1 01 8d 24 23
1b ce df 73 ee f7 d0 d7 dd 28 6c 5d 98 3b 0c 64
9f 41 17 e0 48 2b 29 4a 88 ef d1 5b 8e 02 49 7e
6b ca 48 ef 66 18 33 13 67 ea 39 e2 a3 e3 68 4a
61 00 12 11 e9 6a bb 61 80 a7 66 17 d8 f7 e7 14
50 18 49 79 72 0e a4 63 c3 06 a5 78 94 07 e4 6c
fd 70 ee d1 cb ff bc ac 9c 30 dd 87 a3 5a e1 c1
b9 c6 26 e2 d6 d2 86 87 e5 e6 a2 51 7f 98 dc 64
2b 10 19 fb 55 34 b2 ec 52 62 c3 aa eb b3 0b 85
d7 03 e0 64 1b 19 7b d4 46 24 95 47 ab 30 80 63
26 51 7b 62 a6 04 c7 4a 9d e8 52 fa cd 78 8e 79
9f bc 8e e6 54 eb e7 3f fc 8f e1 50 00 e8 9d d0
bc f9 0b 0e c6 2d 8c c4 4a 05 c3 3f bb 00 a7 b2
01 fd 63 b4 1d 03 b0 4e bc 9b f7 1e a5 0a ba 59
57 66 94 9b d2 22 31 4e 20 85 20 ff eb 47 70 20
bd f0 b8 72 30 85 d6 66 d1 e0 15 4c 70 75 29 5e
0b 72 37 ad 5d 9f e6 d0 56 9b ad cc 2d 0e b9 7c
9c 4f 7b db b2 3d 00 29 9f 29 ae 11 00 6e 3c 9b
01 90 5b 0b b6 20 43 74 73 14 b6 8e 15 14 01 d7
0c 67 69 ff 3d ae d0 71 93 9e 51 f0 72 c0 d2 2a
c8 19 6f 32 92 52 02 15 06 86 d4 35 cd b3 cb df
ca 16 08 2a 9f 0b 0c 1a d9 02 fd be b5 d3 44 43
06 3e 05 62 9f 0f 30 6d 31 93 f3 bb c9 45 ea 2b
28 c7 17 ad 3b cf 5b c9 49 07 04 44 53 74 ac 72
f6 63 69 a0 68 93 24 f0 49 eb e5 81 f0 bb e1 b1
76 4c f9 f6 64 c1 40 f0 1a 41 22 58 95 9e 22 4e
18 85 a3 7d 91 8a 52 b0 2e 33 6f 13 9d b9 a0 bd
eb 6c c4 a6 a4 08 96 d6 da 58 80 5a 45 b5 0f 9f
74 5e 0a 21 8f 2f 3e 26 79 6a 86 53 8c 05 c7 c9
82 59 cd 4e e4 7f cd 63 00 b0 41 be c7 23 a4 76
3f e1 b3 e7 f3 43 6f b7 95 84 69 52 b5 f4 f3 c5
b3 4a 6c 91 a3 04 d3 bb 36 a3 62 8d c9 ec e2 05
08 48 57 ac f4 b1 a2 57 f7 ab 0a 30 35 4f ed 08
33 86 ec 48 16 14 83 7d d0 0c 9f 85 50 11 98 fd
30 bf e2 e3 a8 83 16 12 14 31 d7 c0 50 de 2d 12
45 2f 76 d7 4f c3 40 32 38 8a 64 b5 3c f8 f4 c5
25 35 b5 88 dd cc a2 d9 99 1f 03 1d b9 66 50 d2
9f 47 40 50 04 21 19 05 f1 7e 74 c2 75 81 91 bd
7a f3 91 18 21 bb 8f d9 6f a3 69 11 e1 41 10 a1
7a 1a cb 15 c8 e9 6a 0f e5 31 11 86 3e 23 d0 b8
65 44 1e 76 7b 6d 23 13 4e 11 93 c3 ee b6 1c dc
46 6c b6 3d cb 19 bc 08 9b c0 94 9b b3 10 53 c5
11 0f 29 06 6e c6 02 9a 28 95 ed 3f f4 97 bb 67
c3 54 9e 5d b5 36 19 60 3a 7f 32 e5 b9 39 c2 db
c6 04 d8 8d de 69 51 d0 fa 39 fc f3 43 e1 d0 a5
91 f0 ad a3 a9 2b a8 4f e3 87 07 03 3f 46 ab e3
00 2b 00 5f c4 9a a9 1c 2b 13 8c 79 ac f4 8b ee
7a 11 cd 95 f5 c3 42 60 f9 54 2a c8 81 95 e4 0c
b0 3e 64 46 a6 67 ee fb 43 1d 09 6a e8 c3 03 da
80 f4 b8 df 52 d0 61 e6 75 0a 2f 6a aa 4d 79 db
5f 47 a5 e9 57 c0 12 71 b6 54 43 01 5c b9 04 a7
0a fb e4 0a 77 67 a2 99 ef 1c 04 98 b2 42 8b 68
58 fe 14 e8 56 77 4a 94 8f f2 49 b3 fa 5c 6c ab
11 b8 a7 a6 bc d6 6e e9 6f 4f c6 52 45 c0 34 7d
12 fe a4 08 d8 59 67 9e 34 67 f6 9a 61 7b 48 c1
8c 19 ff 66 62 96 fe 38 71 21 32 30 8c 5d 6b 6c
de 7f 54 50 0f 69 af b1 25 3d 31 d2 3d aa 7f ab
af 7c d1 6e 08 ee aa 02 40 8e ef 0c 15 ba ae 46
23 e7 dc e7 61 39 44 4f 7d 32 31 13 f4 3e c0 ea
ba 4f 07 1c 0f b5 23 dc 5d 89 9a dd 03 9d be 5f
c8 f8 d3 2f 47 c8 76 4a f2 99 87 b7 35 c7 26 86
78 c1 08 1b c7 8f af f6 05 06 38 c2 73 d5 1d 44
de 12 bf 2f 74 7b 42 95 62 37 3c e5 2d ed 54 e9
a0 bc 0a ac 42 34 a2 e5 ac 62 5e 2e 3d 9c ac 8a</string>
</resources>