<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
<ScrollView
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_above="@+id/linearLayout">

    <RelativeLayout
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_ooni_org"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/orgIntro"
            android:id="@+id/textView"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autoLink="web" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailAddressET"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Email address"
            android:layout_marginTop="20dp"
            android:enabled="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/orgUnavailable"
            android:id="@+id/UnavailWarn"
            android:layout_below="@+id/emailAddressET"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:textColor="#c00000" />
    </RelativeLayout>

    </ScrollView>
    <LinearLayout style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/privKeyET"
        android:gravity="bottom">
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_gencert"
            android:id="@+id/SearchButton"
            style="?android:buttonBarButtonStyle"
            android:enabled="false"/>


    </LinearLayout>
    </RelativeLayout>